force-app/main/default/objects/Activity__c/fields/Formatted_Phone__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Phone__c</fullName>
    <formula>if(begins ( Customer__r.Phone_Number__c , &quot;5&quot;), 
	substitute( Customer__r.Phone_Number__c , Customer__r.Phone_Number__c , &quot;1&quot;&amp; Customer__r.Phone_Number__c ),
		if(begins ( Customer__r.Phone_Number__c , &quot;6&quot;), 
			substitute( Customer__r.Phone_Number__c , Customer__r.Phone_Number__c , &quot;1&quot;&amp; Customer__r.Phone_Number__c ),
				if(	begins ( Customer__r.Phone_Number__c , &quot;7&quot;), 
						substitute( Customer__r.Phone_Number__c , Customer__r.Phone_Number__c , &quot;91&quot;&amp; Customer__r.Phone_Number__c ),
					if(begins ( Customer__r.Phone_Number__c , &quot;8&quot;), 
						substitute( Customer__r.Phone_Number__c , Customer__r.Phone_Number__c , &quot;91&quot;&amp; Customer__r.Phone_Number__c ),
						if(begins ( Customer__r.Phone_Number__c , &quot;9&quot;), 
							substitute( Customer__r.Phone_Number__c , Customer__r.Phone_Number__c , &quot;91&quot;&amp; Customer__r.Phone_Number__c ),							
		Customer__r.Phone_Number__c )))))</formula>
    <label>Formatted Phone</label>
    <type>Text</type>
</CustomField>