force-app/main/default/objects/Activity__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log</label>
    <type>Checkbox</type>
</CustomField>