force-app/main/default/objects/Activity__c/fields/Payment_Intent__c.field-meta.xml
<CustomField>
    <fullName>Payment_Intent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Intent</label>
    <referenceTo>Payment_Intent__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>