force-app/main/default/objects/Activity__c/fields/Trackable__c.field-meta.xml
<CustomField>
    <fullName>Trackable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trackable</label>
    <type>Checkbox</type>
</CustomField>