force-app/main/default/objects/Activity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>sms</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>